# deepagents

./: .gitignore  TODO  pyproject.toml
.codex/: config.toml  docker-ssh.md
.deepagents/: Readme.md  config.toml
.run/: deepagents_cli.run.xml
docs/: docker-sandbox-api-zero-to-one-tutorial.md  docker-sandbox-proxy-api-operations.md  docker-user-scope-sandbox.md  user-scope-docker-sandbox-design.md  user-scoped-docker-sandbox-api-service-design.md
examples/: README.md
examples/deploy-docker-user-sandbox/: AGENTS.md  README.md  assistants.py  auth.py  deepagents.toml  graph_runtime.py  models.py  phase-validation-handoff.md  reaper.py  sandboxes.py  server.py  threads.py  tutorial_runner.ps1
examples/deploy-docker-user-sandbox/tests/: conftest.py  test_api_routes.py  test_assistants.py  test_auth.py  test_graph_runtime.py  test_sandboxes.py  test_threads.py  test_user_scope_flow.py
libs/acp/: CHANGELOG.md
libs/cli/: CHANGELOG.md  pyproject.toml
libs/cli/deepagents_cli/: _minimax_model.py  agent.py  config.py  server.py
libs/cli/deepagents_cli/deploy/: bundler.py  config.py  templates.py
libs/cli/tests/integration_tests/: test_deploy_docker_user_scope.py
libs/cli/tests/unit_tests/: test_minimax_model.py
libs/cli/tests/unit_tests/deploy/: test_bundler.py  test_config.py
libs/deepagents/: CHANGELOG.md
libs/deepagents/deepagents/backends/: __init__.py  docker.py
libs/deepagents/tests/unit_tests/: check_api.py
libs/deepagents/tests/unit_tests/backends/: test_docker_sandbox.py
libs/partners/quickjs/: CHANGELOG.md
libs/repl/: CHANGELOG.md
