[project]
name = "deepagents"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "deepagents-cli>=0.0.3",
    "fastapi>=0.136.1",
    "harbor>=0.5.0",
    "langchain-anthropic>=1.4.1",
    "langchain-core>=1.3.2",
    "matplotlib>=3.10.9",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "textual>=8.2.4",
    "tomli-w>=1.2.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "docker>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "paramiko>=3.4.0",
]
